myk8sapp/templates/ingress/es-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: logging  #must be the same namespace where elasticsearch  is installed
spec:
  ingressClassName: "nginx"
  rules:
  - host: elasticsearch.ingress.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elasticsearch
            port: 
              number: 9200
