myk8sapp/templates/ingress/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging  #must be the same namespace where kibana  is installed
spec:
  ingressClassName: "nginx"
  rules:
  - host: kibana.ingress.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-service
            port: 
              number: 5601
